<resources>
    <string name="app_name">TrainTickets</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_button_text">Login</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="my_account">My Account</string>
    <string name="tickets">Tickets</string>
    <string name="to_town">To</string>
    <string name="from_town">From</string>
    <string name="choose_date">Choose Date</string>
    <string name="search_ticket">Search</string>
</resources>
